Alterar titulo correto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section>
-            <h1>FODASE<br><span>O QUE IMPORTA</span></h1>
+            <h1>Fique de olho<br><span>no que importa</span></h1>
             <p>Monitoramento em tempo real com alertas inteligentes para sua aplicação nunca sair do ar sem você saber.</p>
             <a href="#">Testar versão demo</a>
             <img src="img/Group 32.png" alt="Dois celulares com o site da Tecboard">
