Adicionado dark mode

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Tecboard</title>
 </head>
 <body>
-    <header>
-        <img src="img/Logo.png" alt="Logo Tecboard">
+    <header class="topo">
+        <img class="logo" src="img/Logo.png" alt="Logo Tecboard">
+        <img class="dark-mode" src="img/Property 1=Dark.png" alt="Dark">
     </header>
     <main>
         <section>
@@ -19,6 +20,9 @@
             <img src="img/Group 32.png" alt="Dois celulares com o site da Tecboard">
         </section>
     </main>
+    <footer>
+        <p>&copy; Todos os direitos reservados - Tecboard 2026</p>
+    </footer>
     
 </body>
 </html>
